--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -224,7 +224,29 @@
    "edit.menuDescription": "Description",
   "edit.MenuDescriptionHint": "Entrez la description de votre menu.",
    "edit.Note": "Note",
-  "edit.NotesDescription": "Ajouter une note supplémentaire"
+  "edit.NotesDescription": "Ajouter une note supplémentaire",
+
+  "label_always": "Toujours",
+  "label_periodic": "Périodique",
+  "label_specific": "Spécifique",
+
+  "label_days_of_week": "Jours de la semaine :",
+  "label_start_time": "Heure de début",
+  "label_end_time": "Heure de fin",
+  "label_pick": "Choisir",
+  "label_start_date": "Date de début",
+  "label_end_date": "Date de fin",
+
+  "day_monday": "Lundi",
+  "day_tuesday": "Mardi",
+  "day_wednesday": "Mercredi",
+  "day_thursday": "Jeudi",
+  "day_friday": "Vendredi",
+  "day_saturday": "Samedi",
+  "day_sunday": "Dimanche",
+  "edit.PleaseEnterMenuName": "Veuillez entrer le nom du menu",
+  "edit.KeepUnder120Chars": "Gardez la description du menu courte",
+  "edit.KeepNotes120Chars": "Gardez les notes courtes"
       
    
   
