addtional updates on multi language

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -273,8 +273,11 @@
   "Edit_Menu": "Edit Menu",
   "create": "Create",
  
-  "menu.duplicate": "Duplicate"
+  "menu.duplicate": "Duplicate",
   
+  "Translation": "Translation", 
+
+  "Edit": "Edit"
  
    
    
