--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -12,7 +12,7 @@
   "log_out": "Log Out",
   "notifications": "Notifications",
 
-
+"set": "Set",
 
     "dashboard": "Dashboard",
     "order": "Order",
@@ -49,7 +49,7 @@
     "venue_sells_alcohol": "Does your Venue Sell Alcohol?",
     "yes": "Yes",
     "no": "No",
-    "default_language": "Default Language",
+    "default_language": "Menu Main Language",
 
 "Select_Default_Language": "Select Default Language",
 "email": "Email",
@@ -170,7 +170,12 @@
   "phone_number_required": "Phone number is required.",
   "invalid_phone_number": "Please enter a valid phone number.",
   "Language_Options": "Language Options",
-  "other_languages":  "Other Languages",
+  
+  "add": "Add",
+  "please_select_language": "Please select a language",
+  "cannot_add_default_language": "Cannot add the default language",
+  "language_already_exists": "The language already exists",
+  "other_languages": "Optional Additional languages",
   
   "save": "Save",
  
@@ -282,7 +287,12 @@
  "You_are_editing_translations_for": "You are editing translations for {label}.",
 
  "Auto_Translate":"Auto Translate",
- "EnterTextIn": "Enter Text In {langName}"
+ "EnterTextIn": "Enter Text In {langName}",
+ "Select_Main_Language": "Select Main Language",
+ "Add_a_language": "Add a language"
+ 
+
+
    
    
   
